--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+ <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs location access to track delivery progress.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This app needs location access to track delivery progress.</string>
 <key>NSCameraUsageDescription</key>
 <string>Cette application a besoin d'accéder à votre caméra pour prendre une photo de profil.</string>
 <key>NSPhotoLibraryUsageDescription</key>
