--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.4
   table_calendar: ^3.0.9
+  location: ^5.0.3
+  permission_handler: ^11.0.1
+
+
 
 
   # Icons
